fix sign in button alignment on <1024, view all goes to projects, not projects/public

--- a/shared/css/header.scss
+++ b/shared/css/header.scss
@@ -220,5 +220,8 @@
     .create_menu {
       display: none !important;
     }
+    #new_signin_button {
+      margin-top: -3px !important;
+    }
   }
 }
